--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,1 +1,33 @@
-<p>shopping-list-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <div class="row">
+        <div class="col-sm-4 form-group">
+          <label for="name"> Name: </label>
+          <input type="text" id="name" class="form-control" />
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="amount"> Amount: </label>
+          <input type="number" id="amount" class="form-control" />
+        </div>
+        <div class="col-sm-3 form-group">
+          <label for="Weight"> Weight: </label>
+          <input type="text" id="Weight" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success padding-right" type="submit">
+            Add Item
+          </button>
+          <button class="btn btn-danger padding-right" type="button">
+            Delete Item
+          </button>
+          <button class="btn btn-warning padding-right" type="button">
+            Clear Item
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
