--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,17 @@
 <div class="row">
-  <div class="col-xs-10">
-    <app-shopping-list-edit></app-shopping-list-edit>
+  <div class="col-xs-12">
     <hr />
-    <app-ingredient></app-ingredient>
+    <app-shopping-list-edit></app-shopping-list-edit>
+
+    <ul class="list-group" style="margin-top: 10px">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }} ( {{ ingredient.amount }}
+        {{ ingredient.quantity }} )</a
+      >
+    </ul>
   </div>
 </div>
