--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
     <img
-      src="https://cdn.pixabay.com/photo/2017/12/10/14/47/piza-3010062_1280.jpg"
-      alt=""
+      [src]="recipe.imagePath"
+      alt="{{ recipe.name }}"
       class="img-responsive"
     />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h2>Recipe Name</h2>
+    <h2>{{ recipe.name }}</h2>
   </div>
 </div>
 <div class="row">
@@ -28,6 +28,6 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Description</div>
+  <div class="col-xs-12">{{ recipe.description }}</div>
   <div class="col-xs-12">Ingredients</div>
 </div>
