--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,8 +1,14 @@
 <div class="row">
-  <div class="col-md-5">
-    <app-recipe-book></app-recipe-book>
+  <div class="col-md-3">
+    <app-recipe-book
+      (recipeWasSelected)="selectedRecipe = $event"
+    ></app-recipe-book>
   </div>
-  <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+  <div class="col-md-9">
+    <app-recipe-detail
+      *ngIf="selectedRecipe; else infotext"
+      [recipe]="selectedRecipe"
+    ></app-recipe-detail>
+    <ng-template #infotext> Please select a recipe from the list. </ng-template>
   </div>
 </div>
