--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -4,20 +4,24 @@
       <div class="row">
         <div class="col-sm-4 form-group">
           <label for="name"> Name: </label>
-          <input type="text" id="name" class="form-control" />
+          <input type="text" id="name" class="form-control" #nameInput />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount"> Amount: </label>
-          <input type="number" id="amount" class="form-control" />
+          <input type="number" id="amount" class="form-control" #amountInput />
         </div>
         <div class="col-sm-3 form-group">
           <label for="Weight"> Weight: </label>
-          <input type="text" id="Weight" class="form-control" />
+          <input type="text" id="Weight" class="form-control" #weightInput />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success padding-right" type="submit">
+          <button
+            class="btn btn-success padding-right"
+            type="submit"
+            (click)="onAddItem()"
+          >
             Add Item
           </button>
           <button class="btn btn-danger padding-right" type="button">
