--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -14,13 +14,17 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add to list</a></li>
+        <li>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer"
+            >Add to list</a
+          >
+        </li>
         <li><a href="#">Edit recipe</a></li>
         <li><a href="#">Delete recipe</a></li>
       </ul>
@@ -29,5 +33,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">{{ recipe.description }}</div>
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.amount }}{{ ingredient.quantity }} - {{ ingredient.name }}
+      </li>
+    </ul>
+  </div>
 </div>
