--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,8 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <app-recipe-book
-      (recipeWasSelected)="selectedRecipe = $event"
-    ></app-recipe-book>
+    <app-recipe-book></app-recipe-book>
   </div>
   <div class="col-md-9">
     <app-recipe-detail
