--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <hr />
-    <app-shopping-list-edit
-      (ingredientAdded)="onIngredientAdded($event)"
-    ></app-shopping-list-edit>
+    <app-shopping-list-edit></app-shopping-list-edit>
 
     <ul class="list-group" style="margin-top: 10px">
       <a
